// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should call onChange callback 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[MockFunction]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="sg-1iey9hl-formElement radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="sg-rr50qp-container radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          id={null}
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="sg-obun7b-container foo radioItem"
            htmlFor="foo"
          >
            <UncheckedIcon
              className="sg-10dwlu9-icon uncheckedIcon"
            />
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Text
              acceptPlainTextWithPlaceholders={false}
              aria-hidden={true}
              className="sg-17gczke-label label"
              id="foo-label"
              params={{}}
              role={null}
              string="foo"
              transform={null}
            >
              foo
            </Text>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should have on value at a time 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="sg-1iey9hl-formElement radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="sg-rr50qp-container radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          id={null}
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="sg-obun7b-container foo radioItem"
            htmlFor="foo"
          >
            <UncheckedIcon
              className="sg-10dwlu9-icon uncheckedIcon"
            />
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Text
              acceptPlainTextWithPlaceholders={false}
              aria-hidden={true}
              className="sg-17gczke-label label"
              id="foo-label"
              params={{}}
              role={null}
              string="foo"
              transform={null}
            >
              foo
            </Text>
          </label>
        </RadioItem>
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          id={null}
          key="radio_bar/.1"
          label="bar"
          name="bar"
          onChange={[Function]}
        >
          <label
            className="sg-obun7b-container bar radioItem"
            htmlFor="bar"
          >
            <UncheckedIcon
              className="sg-10dwlu9-icon uncheckedIcon"
            />
            <input
              aria-labelledby="bar-label"
              checked={false}
              className="sr-only input"
              id="bar"
              name="bar"
              onChange={[Function]}
              type="radio"
            />
            <Text
              acceptPlainTextWithPlaceholders={false}
              aria-hidden={true}
              className="sg-17gczke-label label"
              id="bar-label"
              params={{}}
              role={null}
              string="bar"
              transform={null}
            >
              bar
            </Text>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render column group with items 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="sg-1iey9hl-formElement radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="sg-rr50qp-container radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          id={null}
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="sg-obun7b-container foo radioItem"
            htmlFor="foo"
          >
            <UncheckedIcon
              className="sg-10dwlu9-icon uncheckedIcon"
            />
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Text
              acceptPlainTextWithPlaceholders={false}
              aria-hidden={true}
              className="sg-17gczke-label label"
              id="foo-label"
              params={{}}
              role={null}
              string="foo"
              transform={null}
            >
              foo
            </Text>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render empty group 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="sg-1iey9hl-formElement radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="sg-rr50qp-container radioGroup"
      />
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render rows group with items 1`] = `
<RadioGroup
  className=""
  direction="rows"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="sg-1iey9hl-formElement radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="sg-1vn8p4b-container radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          id={null}
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="sg-obun7b-container foo radioItem"
            htmlFor="foo"
          >
            <UncheckedIcon
              className="sg-10dwlu9-icon uncheckedIcon"
            />
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Text
              acceptPlainTextWithPlaceholders={false}
              aria-hidden={true}
              className="sg-17gczke-label label"
              id="foo-label"
              params={{}}
              role={null}
              string="foo"
              transform={null}
            >
              foo
            </Text>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should use default value 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value="foo"
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="sg-1iey9hl-formElement radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="sg-rr50qp-container radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={true}
          className=""
          id={null}
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="sg-obun7b-container foo radioItem"
            htmlFor="foo"
          >
            <CheckedIcon
              className="checkedIcon sg-1cj7vn2-active-icon"
            />
            <input
              aria-labelledby="foo-label"
              checked={true}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Text
              acceptPlainTextWithPlaceholders={false}
              aria-hidden={true}
              className="sg-17gczke-label label"
              id="foo-label"
              params={{}}
              role={null}
              string="foo"
              transform={null}
            >
              foo
            </Text>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;
